--- a/application/app/index.ejs
+++ b/application/app/index.ejs
@@ -2,21 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <script Language="JavaScript">resizeTo(512,512);</script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=4.0"></meta>
-    <style>
-        html { height: 100%, width: 100% }
-        #glcanvas {
-            /*-webkit-app-region: drag;*/
-            -webkit-user-select: none;
-            margin: 0;
-            height: 100%;
-            width: 100%;
-        }
-    </style>
+    <title>vue-twitter-client</title>
+    <% if (htmlWebpackPlugin.options.appModules) { %>
+      <!-- Add `app/node_modules` to global paths so `require` works properly in development -->
+      <script>
+        require('module').globalPaths.push('<%= htmlWebpackPlugin.options.appModules.replace(/\\/g, '\\\\') %>')
+      </script>
+    <% } %>
   </head>
   <body>
     <div id="app"></div>
+    <!-- webpack builds are automatically injected -->
   </body>
 </html>
